2021-1112 2更，個人版內頁文字調整

--- a/sass/_variable_personal.scss
+++ b/sass/_variable_personal.scss
@@ -3,9 +3,9 @@
 
 //---------------------------------------------------顏色---------//
 // 定義顏色 此顏色可自由變換
-$primaryColor: #fc6a4a; //主色
+$primaryColor: #009e96; //主色
 $secondaryColor: #9dd095; //輔色
-$lightColor: #fec003; //點綴
+$lightColor: #fc6a4a; //點綴
 $linkColor: #0066cc; //連結
 $importantColor: #eb0202; //重要
 // 但注意真實顏色與語意的關聯必須易於辨識
