--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -336,9 +336,7 @@ footer {
                 padding: .5em 0 0;
                 display: flex;
                 flex-flow: row nowrap;
-                img{
-                    height: 44px;
-                }
+                img{ height: 44px; }
                 span{
                     color: $primaryColor;
                     font-size: .68em;
