--- a/sass/sass/modual/_form-beta.scss
+++ b/sass/sass/modual/_form-beta.scss
@@ -282,6 +282,8 @@ select::-ms-expand {
             }
         }
 
+        .tel_type2{}
+
         // 生日專屬
         .birthday {
             select {
@@ -344,6 +346,7 @@ select::-ms-expand {
                 }
             }
         }
+        .address_type2{}
 
         // 日期專屬
         .datepick {
