--- a/sass/page/_pdf.scss
+++ b/sass/page/_pdf.scss
@@ -25,19 +25,24 @@ html { scroll-behavior: smooth; }
         // width: 100%;
         text-align: left;
         align-items: center;
+
+        &.clear{ float: none; }
     }
+
+    .title{ text-align: center; }
+    .focus{ color: red; }
 
     .note{
         font-size: 90%;
         line-height: 1.3;
         margin: 6px 0;
 
-        &.focus{
-            color: red;
-            // &:before{
-            //     display: none;
-            // }
-        }
+        // &.focus{
+        //     color: red;
+        //     // &:before{
+        //     //     display: none;
+        //     // }
+        // }
     }
 
     h4{
@@ -217,7 +222,7 @@ html { scroll-behavior: smooth; }
         }
     }
 
-    .flex, .flex-2, .flex-3, .flex-1-2, .flex-2-1{
+    .flex, .flex-2, .flex-3, .flex-1-2, .flex-2-1, .flex-type-1{
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
@@ -319,6 +324,30 @@ html { scroll-behavior: smooth; }
             color: #999;
             text-align: right;
         }
+    }
+
+    .flex-type-1{
+        margin-top: 1.5em;
+        .col{
+            flex: 0 0 50%;
+
+            &:first-child{
+                img{ border: solid 1px #666; }
+            }
+
+            &:last-child{
+                text-align: right;
+                .note{
+                    border: 1px solid #666;
+                    min-height: 220px;
+                    width: 220px;
+                    text-align: left;
+                    padding: .5em 1em;
+                    float: right;
+                }
+            }
+        }
+
     }
 }
 
