--- a/sass/page/_pdf.scss
+++ b/sass/page/_pdf.scss
@@ -19,6 +19,7 @@ html { scroll-behavior: smooth; }
     background: #fff;
     margin: 20px auto;
     padding: 1.5em 2em;
+    font-family: 標楷體;
 
     .col{
         float: left;
