--- a/sass/page/_pdf.scss
+++ b/sass/page/_pdf.scss
@@ -46,6 +46,25 @@ html { scroll-behavior: smooth; }
         // }
     }
 
+    .birthday{
+        span{
+            display: inline-block;
+            width: 60px;
+            text-align: center;
+            border-bottom: 1px solid #222;
+            padding: .5em 0;
+            font-size: 110%;
+        }
+    }
+
+    .fill_box{
+        display: block;
+        padding: .5em .3em;
+    }
+
+    h3{
+        margin: 6px 0;
+    }
     h4{
         font-weight: normal;
         line-height: 1.6;
