2022-0210 3更：lp content 無文字時，高度以 css 設定撐開

--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -827,6 +827,9 @@ a{
                 .content{
                     padding: .25em 0;
                     font-size: 112.5%;
+
+                    // 當 content 沒有文字時
+                    min-height: 33px;
                 }
             }
         }
