--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -43,6 +43,8 @@ body {
     }
 }
 
+.text-left{ text-align: left !important;}
+
 //////////////////////////////////////////////////////////// 調整
 html,body{
     &.Login, &.Page{
