2022-0218 2更：table td border-bottom 無規則自行加粗 debug

--- a/sass/sass/modual/_table.scss
+++ b/sass/sass/modual/_table.scss
@@ -5,6 +5,24 @@ table {
     @include screen('xs_mobile') {
         width: 100%;
     }
+
+
+    // 修正 微軟各瀏覽器 border-bottom 會亂數變粗的問題
+    overflow: hidden;
+    tr{ position: relative;}
+    td{
+        &:after{
+            content: "";
+            position: absolute;
+            display: block;
+            width: 100%;
+            height: 1px;
+            background: #ddd;
+            bottom: 0;
+        }
+    }
+    // --------------------------------------------
+
     th,
     // td:not(.gsib_b,.gsc-search-button) {
     //     padding: .5em;
@@ -23,7 +41,7 @@ table {
     }
     td{
         // border: #ddd 1px solid;
-        border-bottom: #ddd 1px solid;
+        // border-bottom: #ddd 1px solid;   // 微軟瀏覽器不論edge、chrome 都會產生亂數項目變粗問題，改用其他寫法
         word-break: break-all;
         text-align: center;
         a {
