2022-0218 4更：火狐 h1 css 跑版調整

--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -342,6 +342,7 @@ footer {
 .Page{
     .header {
         h1{
+            width: -moz-fit-content;  // firefox
             width: fit-content;
             max-width: calc(100% - 300px);
             float: initial;
